<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_gravity="right"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_rectangle"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/apCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/AP"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/cpCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/CP"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/tcpCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/TCP"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSnapshot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_rectangle"
        android:drawableLeft="@drawable/ic_snapshot"
        android:drawablePadding="18dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/btnSnapshot" />

    <Button
        android:id="@+id/btnCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_rectangle"
        android:drawableLeft="@drawable/ic_copy"
        android:drawablePadding="18dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/btnCopy" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_rectangle"
        android:drawableLeft="@drawable/ic_delete"
        android:drawablePadding="18dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/btnDelete" />

</LinearLayout>
